--- a/index.html
+++ b/index.html
@@ -58,13 +58,7 @@
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <button onclick="location.href='menuhuruf.html'">🗒️ Huruf Jepang</button>
-      <button onclick="location.href='artikanji.html'">📒 Kuis Arti Kanji</button>
-      <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
-      <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
-      <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
-      <button onclick="location.href='conversation'">🗒️ Minna no Nihonggo</button>
-      <button onclick="location.href='xpresstka.html'">📘 Kosakata Xpress</button>
-    </div>
+      <button onclick="location.href='artikanji.html'">📒 Kosakata Jepang</button>
   </div>
 
   <script>
