--- a/menukosakata.html
+++ b/menukosakata.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Website Quiz Bahasa Jepang</h1>
+    <h1>Kosakata Jepang</h1>
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <<button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
