--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Website Quiz Bahasa Jepang</h1>
+    <h1>Huruf Jepang</h1>
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <button onclick="goTo('kuis')">📝 Kuis Hirakana 1</button>
