--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Website Quiz Bahasa Jepang By @husain.y.m</h1>
+    <h1>Quiz Bahasa Jepang By @husain.y.m</h1>
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <button onclick="location.href='menuhuruf.html'">🗒️ Huruf Jepang</button>
