--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <button onclick="location.href='menuhuruf.html'">🗒️ Huruf Jepang</button>
-      <button onclick="location.href='artikanji.html'">📒 Kosakata Jepang</button>
+      <button onclick="location.href='menukosakata.html'">📒 Kosakata Jepang</button>
   </div>
 
   <script>
