--- a/menukosakata.html
+++ b/menukosakata.html
@@ -204,10 +204,10 @@
     <div class="illustration">
       <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg">
         <rect x="50" y="50" width="200" height="120" rx="10" fill="#f8f9fa" stroke="#007bff" stroke-width="2"/>
-        <text x="150" y="90" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">食べ物 (Tabemono) - Makanan</text>
-        <text x="150" y="115" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">動物 (Dōbutsu) - Hewan</text>
-        <text x="150" y="140" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">家族 (Kazoku) - Keluarga</text>
-        <text x="150" y="165" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">学校 (Gakkō) - Sekolah</text>
+        <text x="150" y="90" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">(Tabemono) - Makanan</text>
+        <text x="150" y="115" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">(Dōbutsu) - Hewan</text>
+        <text x="150" y="140" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">(Kazoku) - Keluarga</text>
+        <text x="150" y="165" text-anchor="middle" font-family="Arial" font-size="18" fill="#333">(Gakkō) - Sekolah</text>
         <text x="150" y="40" text-anchor="middle" font-family="Arial" font-size="16" fill="#333">語彙 (Goi) - Kosakata</text>
       </svg>
     </div>
