--- a/menukosakata.html
+++ b/menukosakata.html
@@ -225,7 +225,7 @@
       <div class="menu-item" onclick="location.href='kotoba.html'">
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kotoba Minna</div>
-        <div class="menu-description">Belajar kosakata dari buku Minna no Nihongo dengan contoh kalimat</div>
+        <div class="menu-description">Belajar kosakata dari buku Minna no Nihongo BAB 1-25</div>
         <a href="kotoba.html" class="btn">Mulai Belajar</a>
       </div>
       
